--- a/sources1.html
+++ b/sources1.html
@@ -7,8 +7,8 @@
 
 
 
-
-
+<p>All data came from <a href="https://www.niaaa.nih.gov/alcohol-health/overview-alcohol-consumption/alcohol-facts-and-statistics">NIAAA</a> </p>
+<hr>
 <p>1 Substance Abuse and Mental Health Services Administration (SAMHSA). 2015 National Survey on Drug Use and Health (NSDUH).
 Table 2.41B-Alcohol Use in Lifetime, Past Year, and Past Month among Persons Aged 12 or Older, by Demographic Characteristics: Percentages,
 2014 and 2015. Available at: https://www.samhsa.gov/data/sites/default/files/NSDUH-DetTabs-2015/NSDUH-DetTabs-2015/NSDUH-DetTabs-2015.htm#tab2-41b. Accessed 1/18/17.</p>
