--- a/sources1.html
+++ b/sources1.html
@@ -6,7 +6,7 @@
 </head>
 
 
-
+<body>
 <p>All data came from <a href="https://www.niaaa.nih.gov/alcohol-health/overview-alcohol-consumption/alcohol-facts-and-statistics">NIAAA</a> </p>
 <hr>
 <p>1 Substance Abuse and Mental Health Services Administration (SAMHSA). 2015 National Survey on Drug Use and Health (NSDUH).
@@ -134,4 +134,5 @@ NIAAA Newsletter, No. 3, Winter 2004. Available at: http://pubs.niaaa.nih.gov/pu
 <p>34 Substance Abuse and Mental Health Services Administration (SAMHSA). Binge Drinking: Terminology and Patterns of Use,
 2016. Available at: https://www.samhsa.gov/capt/tools-learning-resources/binge-drinking-terminology-patterns. Accessed 1/18/17.</p>
 <hr>
+</body>
 </html>
