--- a/health-physical.html
+++ b/health-physical.html
@@ -287,7 +287,7 @@
             </ul>
          </div>
 
-         <p class="copyright">&copy; Copyright 2014 Keep It Simple. &nbsp; Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a>.</p>
+         <p class="copyright">&copy; Copyright 2019 </p>
 
       </div> <!-- End row -->
 
