--- a/index.html
+++ b/index.html
@@ -251,6 +251,20 @@
 
             </div>
 
+        <div class="widget widget_text group">
+          <h3>Bit of Inspiration</h3>
+
+          <blockquote>“Your best days are ahead of you. The movie starts when the guy gets sober and puts his life back together; it doesn't end there.” </blockquote>
+
+          </div>
+
+            <div class="widget widget_text group">
+              <h3>Find your local AA Chapter</h3>
+
+              <p>Click <a href="http://www.findaa.org/" target="blank">here</a> to find information about your local AA chapters.(US and Canada)</p>
+
+            </div>
+
             <div class="widget widget_popular">
                <h3>Popular Post.</h3>
 
