js popup and title edit

--- a/archives.html
+++ b/archives.html
@@ -8,7 +8,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Sandhills Recovery.</title>
+	<title>Sandhills Recovery. IWNDWYT</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
