--- a/comic.html
+++ b/comic.html
@@ -1,7 +1,7 @@
 <!DOCTYPEHTML>
 <html>
   <head>
-    <title>Alcohol Comics</title>
+    <title>Alcohol Comics. IWNDWYT</title>
   </head>
 
   <body>
