--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Sandhills Recovery.</title>
+	<title>Sandhills Recovery. IWNDWYT</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -235,7 +235,7 @@
         <div class="widget widget_text group">
 					<h3>Find your local AA Chapter</h3>
 
-   				<p>Click <a href="http://www.findaa.org/" target="blank">here</a> to find information about your local AA chapters.(US and Canada)</p>
+   				<p>Click <a href="http://www.findaa.org/" target="_blank">here</a> to find information about your local AA chapters.(US and Canada)</p>
 
    			</div>
 
@@ -252,18 +252,17 @@
             </div>
 
         <div class="widget widget_text group">
-          <h3>Bit of Inspiration</h3>
+          <h3>Daily Comic</h3>
 
-          <blockquote>“Your best days are ahead of you. The movie starts when the guy gets sober and puts his life back together; it doesn't end there.” </blockquote>
+          <a href="comic.html"
+            target="popup"
+            onclick="window.open('comic.html','popup','width=600,height=400'); return false;">
+            <img src="images/comics/beer.png" alt="Web Comic" height="200px" width="200px"
+          </a>
 
           </div>
 
-            <div class="widget widget_text group">
-              <h3>Find your local AA Chapter</h3>
 
-              <p>Click <a href="http://www.findaa.org/" target="blank">here</a> to find information about your local AA chapters.(US and Canada)</p>
-
-            </div>
 
             <div class="widget widget_popular">
                <h3>Popular Post.</h3>
