--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 			   	<ul id="nav" class="nav">
 			      	<li class="current"><a href="index.html">Home</a></li>
-			      	<li class="has-children"><a href="#">Education</a>
+			      	<li class="has-children"><a href="statistics.html">Education</a>
 	                  <ul>
 	                     <li><a href="detox.html">Detox</a></li>
 	                     <li><a href="health-physical.html">Health(Physical)</a></li>
