--- a/archives.html
+++ b/archives.html
@@ -170,6 +170,19 @@
 
    		</div> <!-- End main -->
 
+      <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5c1f1a597a79fc1bddf1fd8e/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 
    		<div id="sidebar" class="four columns">
 
@@ -306,7 +319,7 @@
 
       </div> <!-- End row -->
 
-      <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-chevron-up"></i></a></div>
+      <!-- <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-chevron-up"></i></a></div> -->
 
    </footer> <!-- End Footer-->
 
