--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
       </div> <!-- End row -->
 
-      <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-chevron-up"></i></a></div>
+      <!--<div id="go-top"><a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-chevron-up"></i></a></div>-->
 
    </footer> <!-- End Footer-->
 
