--- a/detox.html
+++ b/detox.html
@@ -181,7 +181,7 @@
                   </form>
                </div> -->
 
-   			<div class="widget widget_categories group">
+   	<!--		<div class="widget widget_categories group">
    				<h3>Categories.</h3>
    				<ul>
 						<li><a href="#" title="">Wordpress</a> (2)</li>
@@ -191,7 +191,7 @@
 						<li><a href="#" title="">Magento</a> (2)</li>
 						<li><a href="#" title="">Uncategorized</a> (9)</li>
 					</ul>
-				</div>
+				</div> -->
 
         <div class="widget widget_text group">
 					<h3>Bit of Inspiration</h3>
@@ -207,7 +207,7 @@
 
         </div>
 
-   			<div class="widget widget_tags">
+   	<!--		<div class="widget widget_tags">
                <h3>Post Tags.</h3>
 
                <div class="tagcloud group">
@@ -220,7 +220,7 @@
                   <a href="#">Resume</a>
                </div>
 
-            </div>
+            </div> -->
 
             <div class="widget widget_popular">
                <h3>Popular Post.</h3>
