--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
    			</div>
 
-   			<div class="widget widget_tags">
+   		<!--	<div class="widget widget_tags">
                <h3>Post Tags.</h3>
 
                <div class="tagcloud group">
@@ -264,7 +264,7 @@
                   <a href="#">Statistics</a>
                </div>
 
-            </div>
+            </div> -->
 
         <div class="widget widget_text group">
           <h3>Daily Comic</h3>
