--- a/statistics.html
+++ b/statistics.html
@@ -193,7 +193,7 @@
                   </form>
                </div> -->
 
-   			<div class="widget widget_categories group">
+   		<!--	<div class="widget widget_categories group">
    				<h3>Categories.</h3>
    				<ul>
 						<li><a href="#" title="">Wordpress</a> (2)</li>
@@ -203,7 +203,7 @@
 						<li><a href="#" title="">Magento</a> (2)</li>
 						<li><a href="#" title="">Uncategorized</a> (9)</li>
 					</ul>
-				</div>
+				</div> -->
 
         <div class="widget widget_text group">
 					<h3>Bit of Inspiration</h3>
@@ -219,7 +219,7 @@
 
         </div>
 
-   			<div class="widget widget_tags">
+   		<!--	<div class="widget widget_tags">
                <h3>Post Tags.</h3>
 
                <div class="tagcloud group">
@@ -230,7 +230,7 @@
                   <a href="#">Blog</a>
                   <a href="#">Landing Page</a>
                   <a href="#">Resume</a>
-               </div>
+               </div> -->
 
             </div>
 
