--- a/health-physical.html
+++ b/health-physical.html
@@ -207,7 +207,7 @@
 
         </div>
 
-   			<div class="widget widget_tags">
+   			<!-- <div class="widget widget_tags">
                <h3>Post Tags.</h3>
 
                <div class="tagcloud group">
@@ -220,7 +220,7 @@
                   <a href="#">Resume</a>
                </div>
 
-            </div>
+            </div> -->
 
             <div class="widget widget_popular">
                <h3>Popular Post.</h3>
