adding comic to all sidebars

--- a/books.html
+++ b/books.html
@@ -363,6 +363,17 @@
 
             </div> -->
 
+            <div class="widget widget_text group">
+              <h3>Daily Comic</h3>
+
+              <a href="comic.html"
+                target="popup"
+                onclick="window.open('comic.html','popup','width=600,height=400'); return false;">
+                <img src="images/comics/beer.png" alt="Web Comic" height="200px" width="200px"
+              </a>
+
+              </div>
+
             <div class="widget widget_popular">
                <h3>Popular Post.</h3>
 
