--- a/chat.html
+++ b/chat.html
@@ -10,5 +10,7 @@
     style="width:100%;height:400px;"></div><script
     async src="http://tlk.io/embed.js"
     type="text/javascript"></script>
+
+    <p> testing </p>
   </body>
 </html>
