--- a/chat.html
+++ b/chat.html
@@ -1,8 +1,8 @@
-<!DOCTYPEHTML>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Sandhills Recovery Chat</title>
-  <head>
+  </head>
 
   <body>
     <div id="tlkio" data-channel="Sandhills_Recovery"
