--- a/chat.html
+++ b/chat.html
@@ -5,11 +5,7 @@
   </head>
 
   <body>
-    <div id="tlkio" data-channel="Sandhills_Recovery"
-    data-theme="theme--minimal"
-    style="width:100%;height:400px;"></div><script
-    async src="http://tlk.io/embed.js"
-    type="text/javascript"></script>
+<div id="tlkio" data-channel="Sandhills_Recovery" data-theme="theme--day" style="width:100%;height:400px;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
 
     <p> testing </p>
   </body>
