--- a/chat.html
+++ b/chat.html
@@ -5,8 +5,7 @@
   </head>
 
   <body>
-<div id="tlkio" data-channel="Sandhills_Recovery" data-theme="theme--day" style="width:100%;height:400px;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
-
+    <iframe src="http://deadsimplechat.com/+jCzAF" frameborder="0" width="800px" height="600px"></iframe>
     <p> testing </p>
   </body>
 </html>
