--- a/chat.html
+++ b/chat.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPEHTML>
 <html>
   <head>
-    <title>Sandhills Recovery Chat</title>
+    <title>Chat</title>
   </head>
 
   <body>
-    <iframe src="http://deadsimplechat.com/+jCzAF" frameborder="0" width="800px" height="600px"></iframe>
-    <p> testing </p>
+    <iframe src="http://deadsimplechat.com/+xmsti" frameborder="0" width="800px" height="600px"></iframe>
   </body>
+
 </html>
