--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <iframe src="http://deadsimplechat.com/+xmsti" frameborder="0" width="800px" height="600px"></iframe>
+    <iframe src="http://deadsimplechat.com/+xmsti" frameborder="10px" width="800px" height="600px"></iframe>
   </body>
 
 </html>
