--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <iframe src='https://minnit.chat/Recovery?embed&transparent' width='1000' height='500' style='border:none;' allowTransparency='true'></iframe><br><a href='https://minnit.chat/Recovery' target='_blank'>Free HTML5 Chatroom powered by Minnit Chat</a>
+    <iframe src='https://minnit.chat/Recovery?embed&mobiletransparent' width='1000' height='500' style='border:none;' allowTransparency='true'></iframe><br><a href='https://minnit.chat/Recovery' target='_blank'></a>
   </body>
 
 </html>
