adding group chat as menu item

--- a/donations.html
+++ b/donations.html
@@ -70,6 +70,7 @@
 	               </li>
 	               <li><a href="about.html">About</a></li>
 	               <li><a href="archives.html">Archives</a></li>
+                 <li><a href="chat.html">Group Chat</a></li>
 			      	   <li class="current"><a href="donations.html">Donations</a></li>
 			   	</ul> <!-- end #nav -->
 
