--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 	               </li>
 	               <li><a href="about.html">About</a></li>
 	               <li><a href="archives.html">Archives</a></li>
+                 <li><a href="chat.html">Group Chat</a></li>
 			      	   <li><a href="donations.html">Donations</a></li>
+
 			   	</ul> <!-- end #nav -->
 
 	   	</div>
