--- a/archives.html
+++ b/archives.html
@@ -68,7 +68,7 @@
 
                    </ul>
                 </li>
-                <li><a href="about.html">About</a></li>
+
                 <li class="current"><a href="archives.html">Archives</a></li>
                 <li><a href="chat.html">Group Chat</a></li>
                 <li><a href="donations.html">Donations</a></li>
@@ -287,7 +287,7 @@
 
          <div class="six columns info">
 
-            <h3>About Keep It Simple</h3>
+            <h3>About Sandhills Recovery</h3>
 
             <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
             Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
@@ -321,7 +321,7 @@
 
             <ul class="navigate group">
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
+
               <li><a href="archives.html">Archives</a></li>
               <li><a href="donations.html">Donations</a></li>
             </ul>
