--- a/chat.html
+++ b/chat.html
@@ -58,7 +58,7 @@
 
 			   	<ul id="nav" class="nav">
 			      	<li><a href="index.html">Home</a></li>
-			      	<li class="has-children current"><a href="#">Education</a>
+			      	<li class="has-children"><a>Education</a>
 	                  <ul>
 	                     <li><a href="detox.html">Detox</a></li>
 	                     <li><a href="health-physical.html">Health(Physical)</a></li>
@@ -68,9 +68,9 @@
 
 	                  </ul>
 	               </li>
-	               <li><a href="about.html">About</a></li>
+
 	               <li><a href="archives.html">Archives</a></li>
-                 <li><a href="chat.html">Group Chat</a></li>
+                 <li class="current"><a href="chat.html">Group Chat</a></li>
 			      	   <li><a href="donations.html">Donations</a></li>
 			   	</ul> <!-- end #nav -->
 
@@ -96,7 +96,7 @@
 
 					<p class="lead">Chat Anonymously with fellow recovering addicts.</p>
 
-          <iframe src='https://minnit.chat/Recovery?embed&transparent' style='border:none;' allowTransparency='true'></iframe><br><a href='https://minnit.chat/Recovery' target='_blank'>Open in full page view</a>
+          <iframe src='https://minnit.chat/Recovery?embed&transparent' style='border:none;' allowTransparency='true'></iframe>
 
 
         </section> <!-- End page -->
@@ -219,7 +219,7 @@
 
          <div class="six columns info">
 
-            <h3>About Keep It Simple</h3>
+            <h3>About Sandhills Recovery</h3>
 
             <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
             Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
@@ -253,7 +253,7 @@
 
             <ul class="navigate group">
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
+
               <li><a href="archives.html">Archives</a></li>
               <li><a href="donations.html">Donations</a></li>
             </ul>
