--- a/page.html
+++ b/page.html
@@ -239,7 +239,7 @@
 
          <div class="six columns info">
 
-            <h3>About Keep It Simple</h3>
+            <h3>About Sandhills Recovery</h3>
 
             <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
             Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
