--- a/page.html
+++ b/page.html
@@ -253,7 +253,7 @@
 
          <div class="four columns">
 
-            <h3>Photostream</h3>
+            <h3> Our Most Recent Instagram Images</h3>
 
             <ul class="photostream group">
                <li><a href="#"><img alt="thumbnail" src="images/thumb.jpg"></a></li>
