--- a/chat.html
+++ b/chat.html
@@ -233,7 +233,7 @@
 
          <div class="four columns">
 
-            <h3>Recent Images</h3>
+            <h3>Our Most Recent Instagram Images</h3>
 
             <ul class="photostream group">
                <li><a href="#"><img alt="thumbnail" src="images/thumb.jpg"></a></li>
