--- a/statistics.html
+++ b/statistics.html
@@ -171,6 +171,9 @@
 
           <p id="alcohol-related-deaths"class ="lead">Alcohol-Related Deaths:</p>
 
+          <img class="image-depressed" src="images/crash.jpg" alt="car accident"height="200px"width="400px">
+          <p class="photo-by">Photo by <a href="https://unsplash.com/@iangvalerio"target="_blank">Ian Valerio</a> on <a href="https://unsplash.com/"target="_blank">Unsplash</a>
+
           <p class="tab">
 
             An estimated 88,0008 people (approximately 62,000 men and 26,000 women
@@ -185,6 +188,10 @@
 
           <p id="Economic-burden"class="lead">Economic Burden:</p>
 
+          <img class="image-depressed" src="images/money.jpg" alt="woman counting money"height="200px"width="400px">
+          <p class="photo-by">Photo by <a href="https://unsplash.com/@sharonmccutcheon"target="_blank">Sharon McCutcheon</a> on <a href="https://unsplash.com/"target="_blank">Unsplash</a>
+
+
           <p class="tab">
 
             In 2010, alcohol misuse cost the United States $249.0 billion.
@@ -196,6 +203,8 @@
 
           <p id="global-burden"class="lead">Global Burden:</p>
 
+          <img class="image-depressed" src="images/globe.jpg" alt="globe"height="200px"width="400px">
+          <p class="photo-by">Photo by <a href="https://unsplash.com/@adolfofelix"target="_blank">Adolfo Félix</a> on <a href="https://unsplash.com/"target="_blank">Unsplash</a>
           <p class="tab">
 
             In 2012, 3.3 million deaths, or <strong>5.9&#37;</strong> of all global deaths (<strong>7.6&#37;</strong> for men and <strong>4.1&#37;</strong>
@@ -221,12 +230,19 @@
 
           <p id="family-consequences"class="lead">Family Consequences:</p>
 
+          <img class="image-depressed" src="images/hangover.jpg" alt="woman with hangover"height="200px"width="400px">
+          <p class="photo-by">Photo by <a href="https://unsplash.com/@issam_hammoudii"target="_blank">Issam Hammoudi</a> on <a href="https://unsplash.com/"target="_blank">Unsplash</a>
+
+
           <p class ="tab">
             More than <strong>10&#37;</strong> of U.S. children live with a parent with alcohol problems, according to a 2012 study.
             <span class="cite-source"><a href="sources1.html"target="popup"onclick="window.open('sources1.html','popup','width=600,height=600'); return false;">16</a></span>
           </p>
 
           <p id="underage-alcohol-use"class="lead">Underage Alcohol Use:</p>
+
+          <img class="image-depressed" src="images/highschool.jpg" alt="High School Students"height="200px"width="400px">
+          <p class="photo-by">Photo by <a href="https://unsplash.com/@rawpixel"target="_blank">rawpixel</a> on <a href="https://unsplash.com/"target="_blank">Unsplash</a>
 
           <p><strong>Prevalence of Drinking:</strong></p>
             <p class="tab">According to the 2015 NSDUH, <strong>33.1&#37;</strong> of 15-year-olds report that they have
@@ -267,6 +283,10 @@
           </p>
 
           <p id="college-students"class="lead">Alcohol and College Students:</p>
+
+          <img class="image-depressed" src="images/college.jpg" alt="college students"height="200px"width="400px">
+          <p class="photo-by">Photo by <a href="https://unsplash.com/@juancadg"target="_blank">Juan Carlos</a> on <a href="https://unsplash.com/"target="_blank">Unsplash</a>
+
           <p><strong>Prevalence of Alcohol Use:</strong></p>
           <p class="tab">
             Prevalence of Drinking: According to the 2015 NSDUH, <strong>58&#37;</strong> of full-time college students
@@ -308,6 +328,10 @@
             <span class="cite-source"><a href="sources1.html"target="popup"onclick="window.open('sources1.html','popup','width=600,height=600'); return false;">25</a></span>
           </p>
           <p id="alcohol-pregnancy"class="lead">Alcohol and Pregnancy:</p>
+
+          <img class="image-depressed" src="images/baby.jpg" alt="Baby"height="200px"width="400px">
+          <p class="photo-by">Photo by <a href="https://unsplash.com/@michal9335"target="_blank">Michal Bar Haim</a> on <a href="https://unsplash.com/"target="_blank">Unsplash</a>
+
           <p class="tab">
             The prevalence of Fetal Alcohol Syndrome (FAS) in the United States was estimated by the Institute of Medicine in 1996
              to be between 0.5 and 3.0 cases per 1,000.
@@ -319,6 +343,10 @@
             <span class="cite-source"><a href="sources1.html"target="popup"onclick="window.open('sources1.html','popup','width=600,height=600'); return false;">27,28</a></span>
           </p>
           <p id="human-body"class="lead">Alcohol and the Human Body:</p>
+
+          <img class="image-depressed" src="images/body.jpg" alt="doctors performing surgery"height="200px"width="400px">
+          <p class="photo-by">Photo by <a href="https://unsplash.com/@gpiron"target="_blank">Piron Guillaume</a> on <a href="https://unsplash.com/"target="_blank">Unsplash</a>
+
           <p class="tab">
             In 2015, of the 78,529 liver disease deaths among individuals ages 12 and older,
             <strong>47&#37;</strong> involved alcohol. Among males, 49,695 liver disease deaths occurred and
@@ -350,7 +378,7 @@
 
 				      	<p>SAMHSA defines heavy alcohol use as binge drinking on 5 or more days in the past month.
                   <img class="image-depressed" src="images/depressed.jpg" alt="depressed man smoking cigarette"height="200px"width="400px">
-                  <p class="photo-by">Photo by <a href="https://unsplash.com/@ayahya09">Ali Yahya</a> on <a href="https://unsplash.com/">Unsplash</a>
+                  <p class="photo-by">Photo by <a href="https://unsplash.com/@ayahya09"target="_blank">Ali Yahya</a> on <a href="https://unsplash.com/"target="_blank">Unsplash</a>
 				         </p>
 
 				      	</div>
