--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
    <!-- CSS
     ================================================== -->
-   <link rel="stylesheet" href="css/default.css">
-	<link rel="stylesheet" href="css/layout.css">
+   <link rel="preload"rel="stylesheet" href="css/default.css">
+	<link rel="preload"rel="stylesheet" href="css/layout.css">
 	<link rel="stylesheet" href="css/media-queries.css">
 
    <!-- Script
@@ -28,7 +28,7 @@
 
    <!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="favicon.png" >
+	<link rel="preload"rel="shortcut icon" href="favicon.png" >
 
 </head>
 
