updates to everything.
completed index.html
fixed main nav issue
removed donations page

--- a/books.html
+++ b/books.html
@@ -56,23 +56,15 @@
 
 	   	<div class="row">
 
-			   	<ul id="nav" class="nav">
-			      	<li><a href="index.html">Home</a></li>
-			      	<li class="has-children current"><a href="#">Education</a>
-	                  <ul>
-	                     <li><a href="detox.html">Detox</a></li>
-	                     <li><a href="health-physical.html">Health(Physical)</a></li>
-	                     <li><a href="health-mental.html">Health(Mental)</a></li>
-                       <li><a href="statistics.html">Statistics</a></li>
-                       <li><a href="books.html">Books</a></li>
+        <ul id="nav" class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="statistics.html">Statistics</a></li>
+            <li><a href="detox.html">Detox</a></li>
+            <li><a href="chat.html">Group Chat</a></li>
+            <li class="current"><a href="books.html">Books</a></li>
+            <li><a href="archives.html">Archives</a></li>
 
-	                  </ul>
-	               </li>
-
-	               <li><a href="archives.html">Archives</a></li>
-                 <li><a href="chat.html">Group Chat</a></li>
-			      	   <li><a href="donations.html">Donations</a></li>
-			   	</ul> <!-- end #nav -->
+			  </ul> <!-- end #nav -->
 
 	   	</div>
 
@@ -94,18 +86,15 @@
 							Books and Literature
 					</h2>
 
-					<p class="lead">There are numerous books that have been written with the sole purpose of aiding you during your path to recovery.
+					<p class="tab">There are numerous books that have been written with the sole purpose of aiding you during your path to recovery.
             Thanks to advice from various alcoholism-related communities, we have compiled a list of the most revered and best-reviewed books
             on alcoholism and recovery. Please feel free to <a href="contact.html">contact us</a> if there are any books that you believe should be added to this list. </p>
 
-					<p class="lead">Whenever possible, we tried to find free versions of this literature. We are constantly reaching out to the authors
-            in an attempt to provide free options.</p>
-
-					<p class="lead">For many people, the first book that they pick up is the "The Big Book". You can read the ebook
+					<p class="tab">For many people, the first book that they pick up is the "The Big Book". You can read the ebook
             for free  <a href="https://www.aa.org/pages/en_US/alcoholics-anonymous" target="_blank">here.</a>  or listen to the audiobook
             for free <a href="https://www.aa.org/pages/en_US/alcoholics-anonymous-audio-version" target="_blank">here.</a></p>
 
-            <p class="lead">To get you started, you can order free physical copies or download a free digital PDF of the
+            <p class="tab">To get you started, you can order free physical copies or download a free digital PDF of the
               "Rethinking Drinking" workbook <a href="https://pubs.niaaa.nih.gov/OrderForm/EncForm/order_page" target="blank">here.</a>
                 The National Institute of Alcohol Abuse will mail you up to 30 copies at no cost. (A great idea to hand out to
                 newcomers to any recovery community that you may be involved with)
@@ -449,7 +438,7 @@
                <li><a href="index.html">Home</a></li>
 
                <li><a href="archives.html">Archives</a></li>
-               <li><a href="donations.html">Donations</a></li>
+
             </ul>
          </div>
 
