--- a/detox.html
+++ b/detox.html
@@ -56,22 +56,14 @@
 
 	   	<div class="row">
 
-			   	<ul id="nav" class="nav">
-			      	<li><a href="index.html">Home</a></li>
-			      	<li class="has-children current"><a href="#">Education</a>
-	                  <ul>
-	                     <li><a href="detox.html">Detox</a></li>
-	                     <li><a href="health-physical.html">Health(Physical)</a></li>
-	                     <li><a href="health-mental.html">Health(Mental)</a></li>
-                       <li><a href="statistics.html">Statistics</a></li>
-                       <li><a href="books.html">Books</a></li>
+        <ul id="nav" class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="statistics.html">Statistics</a></li>
+            <li class="current"><a href="detox.html">Detox</a></li>
+            <li><a href="chat.html">Group Chat</a></li>
+            <li><a href="books.html">Books</a></li>
+            <li><a href="archives.html">Archives</a></li>
 
-	                  </ul>
-	               </li>
-
-	               <li><a href="archives.html">Archives</a></li>
-                 <li><a href="chat.html">Group Chat</a></li>
-			      	   <li><a href="donations.html">Donations</a></li>
 			   	</ul> <!-- end #nav -->
 
 	   	</div>
@@ -308,7 +300,7 @@
               <li><a href="index.html">Home</a></li>
 
               <li><a href="archives.html">Archives</a></li>
-              <li><a href="donations.html">Donations</a></li>
+
             </ul>
          </div>
 
