added weekly video

--- a/index.html
+++ b/index.html
@@ -175,17 +175,10 @@
 
    			</div>
 
-   		<!--	<div class="widget widget_tags">
-               <h3>Post Tags.</h3>
-
-               <div class="tagcloud group">
-                	<a href="#">Detox</a>
-                  <a href="#">Health(Physical)</a>
-                  <a href="#">Health(Mental)</a>
-                  <a href="#">Statistics</a>
-               </div>
-
-            </div> -->
+   		 <div class="widget widget_text group">
+               <h3>Weekly Video</h3>
+                 <p> Check out this weeks featured video<br> <a href="video.html" target="_blank">TED Talk: Glennon Doyle Melton - Lessons from The Mental Hospital (2013)</a></p>
+            </div>
 
         <div class="widget widget_text group">
           <h3>Daily Comic</h3>
